# cookie-stand-api

./: api_tester.py  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
accounts/: models.py
accounts/migrations/: 0001_initial.py
cookie_project/: asgi.py  settings.py  urls.py  wsgi.py
cookie_stands/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
cookie_stands/migrations/: 0001_initial.py  0002_alter_cookiestand_owner.py
